2009-12-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-echo-mark-marker-length): New defconst.
	(tramp-echo-mark, tramp-echoed-echo-mark-regexp): Use it.
	(tramp-check-for-regexp): Check also, when an echoing shell stops
	to echo sent commands.

2009-12-09  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-insert-directory): Suppress error messages.

2009-12-07  Michael Albinus  <michael.albinus@gmx.de>

	Handle prompt rules of ksh in OpenBSD 4.5.  Reported by Raphaël
	Berbain <raphael.berbain@gmail.com>.

	* tramp.el (tramp-end-of-output): Move up.  Use `#' and `$'
	characters.
	(tramp-initial-end-of-output): New defconst.
	(tramp-methods, tramp-find-shell)
	(tramp-open-connection-setup-interactive-shell)
	(tramp-maybe-open-connection): Use it.
	(tramp-shell-prompt-pattern, tramp-wait-for-output): Handle
	existence of `#' and `$'.

	* tramp-fish.el (tramp-fish-maybe-open-connection): Use
	`tramp-initial-end-of-output'.

2009-12-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-file-remote-p): Expand FILENAME for the
	benefit of returning an expanded localname.
	(tramp-tramp-file-p): Handle the case NAME is not a string.

2009-11-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-maybe-open-connection): Open the remote shell
	with "exec" when possible.  This prevents trailing prompts in
	`start-file-process'.

2009-11-24  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-eshell-directory-change): New defun.  Add it to
	`eshell-directory-change-hook'.

2009-11-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-shell-prompt-pattern): Use \r for carriage
	return.
	(tramp-handle-make-symbolic-link)
	(tramp-handle-dired-compress-file, tramp-handle-expand-file-name):
	Quote file names.
	(tramp-send-command-and-check): New argument DONT-SUPPRESS-ERR.
	(tramp-handle-process-file): Use it.

2009-11-19  Michael Albinus  <michael.albinus@gmx.de>
