@@ -4647,16 +4647,19 @@ Lisp error raised when PROGRAM is nil is trapped also, returning 1."
 (defun tramp-handle-file-remote-p (filename &optional identification connected)
   "Like `file-remote-p' for Tramp files."
   (when (tramp-tramp-file-p filename)
-    (with-parsed-tramp-file-name (expand-file-name filename) nil
-      (and (or (not connected)
-	       (let ((p (tramp-get-connection-process v)))
-		 (and p (processp p) (memq (process-status p) '(run open)))))
-	   (cond
-	    ((eq identification 'method) method)
-	    ((eq identification 'user) user)
-	    ((eq identification 'host) host)
-	    ((eq identification 'localname) localname)
-	    (t (tramp-make-tramp-file-name method user host "")))))))
+    (let* ((v (tramp-dissect-file-name filename))
+	   (p (tramp-get-connection-process v))
+	   (c (and p (processp p) (memq (process-status p) '(run open)))))
+      ;; We expand the file name only, if there is already a connection.
+      (with-parsed-tramp-file-name
+	  (if c (expand-file-name filename) filename) nil
+	(and (or (not connected) c)
+	     (cond
+	      ((eq identification 'method) method)
+	      ((eq identification 'user) user)
+	      ((eq identification 'host) host)
+	      ((eq identification 'localname) localname)
+	      (t (tramp-make-tramp-file-name method user host ""))))))))
 
 (defun tramp-find-file-name-coding-system-alist (filename tmpname)
   "Like `find-operation-coding-system' for Tramp filenames.
@@ -8428,36 +8431,6 @@ Only works for Bourne-like shells."
 	  (setq result (replace-match (format "'%s'" tramp-rsh-end-of-line)
 				      t t result)))
 	result))))
-
-;; We currently (sometimes) use "[" and "]" in the filename format.
-;; This means that Emacs wants to expand wildcards if
-;; `find-file-wildcards' is non-nil, and then barfs because no
-;; expansion could be found.  We detect this situation and do
-;; something really awful: we have `file-expand-wildcards' return the
-;; original filename if it can't expand anything.  Let's just hope
-;; that this doesn't break anything else.
-;; CCC: This check is now also really awful; we should search all
-;; of the filename format, not just the prefix.
-(when (string-match "\\[" tramp-prefix-format)
-  (defadvice file-expand-wildcards
-    (around tramp-advice-file-expand-wildcards activate)
-    (let ((name (ad-get-arg 0)))
-      ;; If it's a Tramp file, dissect it and look if wildcards need
-      ;; to be expanded at all.
-      (if (and
-	   (tramp-tramp-file-p name)
-	   (not	(string-match
-		 "[[*?]"
-		 (tramp-file-name-localname (tramp-dissect-file-name name)))))
-	  (setq ad-return-value (list name))
-	;; Otherwise, just run the original function.
-	ad-do-it)))
-  (add-hook
-   'tramp-unload-hook
-   (lambda ()
-     (ad-remove-advice
-      'file-expand-wildcards 'around 'tramp-advice-file-expand-wildcards)
-     (ad-activate 'file-expand-wildcards))))
 
 ;; Checklist for `tramp-unload-hook'
 ;; - Unload all `tramp-*' packages
